--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
   <input cp-bind="store1:value sync:keydown">
   <input cp-bind="store1:value">
   <input type="checkbox" cp-bind="store1:checked sync:change">
-  <input type="checkbox" cp-eval="store1:checked sync:change">
+  <input type="checkbox" cp-eval="store1:checked isChecked">
 
   <!-- Store script -->
   <script src="dist/copper.dev.iife.js"></script>
@@ -27,6 +27,11 @@
     setTimeout(()=> {
       store1.update("Last one")
     }, 6000)
+
+    function isChecked(val) {
+      if(val === "We're at 4k") return true;
+      else return false;
+    }
   </script>
 </body>
 </html>
