--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Reactivity test - IIFE</h1>
 
-  <p>This is an example of dynamic text! The current store value is: <cp-interp value="store1">Here is a default value.</cp-interp></p>
-  <p>Here is text that can be HTML: <cp-interp value="store1" cp-html>Here is a default value.</cp-interp></p>
+  <p>This is an example of dynamic text! The current store value is: <cp-str cp-value="store1">Here is a default value.</cp-str></p>
+  <p>Here is text that can be HTML: <cp-str cp-value="store1" cp-html>Here is a default value.</cp-str></p>
 
   <!-- Content -->
   <div class="sync-grid">
