account for style binding

--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -105,6 +105,7 @@
     }
 
     function showDiv({val}) {
+      console.log("Show div?")
       if(val === "We're at 4k") return true;
       else return false;
     }
