--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -31,6 +31,7 @@
       <!-- Default / fallback options (replaced if dynamic options work) -->
       <cu-default cu-template="select-ops">
         <option value="" default>Blank</option>
+        <option value="My text">Initial Value</option>
         <option value="<span class='colorful'>Another update</span>">Show update text</option>
         <option value="We're at 4k">Show 4k text</option>
       </cu-default>
