--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Reactivity test - IIFE</h1>
 
-  <p>This is an example of dynamic text! The current store value is: <cu-str cu-value="store1">Here is a default value.</cu-str></p>
-  <p>Here is text that can be HTML: <cu-str cu-value="store1" cu-html>Here is a default value.</cu-str></p>
-  <p>Store 2 nested: <cu-str cu-value="store2.values[1]">Here is a default value.</cu-str></p>
+  <p>This is an example of dynamic text! The current store value is: <span cu-bind="innerText:store1">Here is a default value.</span></p>
+  <p>Here is text that can be HTML: <span cu-bind="innerHTML:store1">Here is a default value.</span></p>
+  <p>Store 2 nested: <span cu-bind="innerHTML:store2.values[1]">Here is a default value.</span></p>
 
   <!-- Content -->
   <div class="sync-grid">
