--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -8,20 +8,20 @@
 <body>
   <h1>Reactivity test - IIFE</h1>
 
-  <p>This is an example of dynamic text! The current store value is: <span cu-bind="innerText:store1">Here is a default value.</span></p>
-  <p>Here is text that can be HTML: <span cu-bind="innerHTML:store1">Here is a default value.</span></p>
-  <p>Store 2 nested: <span cu-bind="innerHTML:store2.values[1]">Here is a default value.</span></p>
+  <p>This is an example of dynamic text! The current store value is: <span data-bind="store1:innerText">Here is a default value.</span></p>
+  <p>Here is text that can be HTML: <span data-bind="store1:innerHTML">Here is a default value.</span></p>
+  <p>Store 2 nested: <span data-bind="store2.values[1]:innerHTML">Here is a default value.</span></p>
 
   <!-- Content -->
   <div class="sync-grid">
-    <label>On keyup:</label> <input cu-bind="store1:value sync:keyup|change">
-    <label>Bind only:</label> <input cu-bind="store1:value">
-    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" cu-bind="store1:checked sync:change">
-    <label for="cb2">Bind checkbox:</label> <input id="cb2" type="checkbox" cu-bind="store1:checked isChecked">
+    <label>On keyup:</label> <input data-bind="store1:value" data-sync="store1:value on:keyup|change">
+    <label>Bind only:</label> <input data-bind="store1:value">
+    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" data-bind="store1:checked" data-sync="store1:checked on:change">
+    <label for="cb2">Bind checkbox:</label> <input id="cb2" type="checkbox" data-bind="store1:checked isChecked">
 
     <!-- Select (with dynamic options) -->
     <label>Dyn select</label>
-    <select cu-bind="store1:value sync:change">
+    <select data-bind="store1:value" data-sync="store1:value on:change">
       <!-- Dynamic frontend replace -->
       <template id="select-ops" cu-each="store1 as letter, index">
         <!-- Dynamic options -->
@@ -48,7 +48,7 @@
     <template cu-else>Else</template>
   </div>
 
-  <div class="trans" cu-bind="store1 specialStyling"></div>
+  <div class="trans" data-bind="store1 specialStyling"></div>
 
   <!-- Store script -->
   <script src="../dist/unified/copper.dev.iife.js"></script>
