--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -63,7 +63,6 @@
       }
     });
 
-    Cu.init();
     setTimeout(()=> {
       store1.update("<span class='colorful'>Another update</span>")
     }, 4000)
@@ -75,6 +74,7 @@
     }, 12000)
 
     function specialStyling({val, el}) {
+      console.log("Special styling called!")
       if(val === "My text") {
         el.innerHTML = "My text";
         el.style = "background: blue; height: 5rem; width: 90vw; width: 12rem;";
@@ -101,6 +101,7 @@
     }
 
     function isChecked({val}) {
+      console.log("isChecked called!")
       if(val === "We're at 4k") return true;
       else return false;
     }
@@ -108,6 +109,10 @@
     function showDiv({val}) {
       return val === "We're at 4k";
     }
+
+    Cu.funcs({specialStyling, isChecked, showDiv});
+    Cu.init();
+
   </script>
 
   <style>
