Setting up for nested sync

--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -16,7 +16,7 @@
   <div class="sync-grid">
     <label>On keyup:</label> <input data-bind="store1->value" data-sync="on:keyup|change value->store1">
     <label>Bind only:</label> <input data-bind="store1->value">
-    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" data-bind="store1->checked" data-sync="on:change checked->store1">
+    <label for="cb">Sync checkbox:</label> <input id="cb" type="checkbox" data-bind="store1->checked" data-sync="on:change checked->store1; on:change checked->store2.values[0]">
     <label for="cb2">Bind checkbox:</label> <input id="cb2" type="checkbox" data-bind="store1->checked isChecked">
 
     <!-- Select (with dynamic options) -->
@@ -58,6 +58,7 @@
       value: { values: ["one", "two"]},
       upstream: ["store1"],
       updater: ([Store1], cur)=> {
+        console.log("Store 2 updater", cur.values);
         cur.values[1] = Store1;
         return cur;
       }
