Better event binding registry specificity

--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -11,6 +11,7 @@
   <p>This is an example of dynamic text! The current store value is: <span data-bind="store1->innerText">Here is a default value.</span></p>
   <p>Here is text that can be HTML: <span data-bind="store1->innerHTML">Here is a default value.</span></p>
   <p>Store 2 nested: <span data-bind="store2.values[1]->innerHTML">Here is a default value.</span></p>
+  <p>Checkbox set to checked? <span data-bind="store2.values[0]->innerText"></span></p>
 
   <!-- Content -->
   <div class="sync-grid">
