Playing with observers

--- a/tests/interactive.iife/interactive.html
+++ b/tests/interactive.iife/interactive.html
@@ -110,9 +110,7 @@
       return val === "We're at 4k";
     }
 
-    Cu.funcs({specialStyling, isChecked, showDiv});
-    Cu.init();
-
+    Cu.assignFuncs({specialStyling, isChecked, showDiv});
   </script>
 
   <style>
